--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-<head> Declaration of Independence: A Transcription </head>
+<!doctype html>
+<html lang = "en-US">
+  
+<head> Declaration of Independence: A Transcription </head>  
+  <title> this is a test title</title>
+</html>
+
