--- a/module02/index.html
+++ b/module02/index.html
@@ -12,5 +12,28 @@
     <li> He has refused for a long time, after such dissolutions, to cause others to be elected; whereby the Legislative powers, incapable of Annihilation, have returned to the People at large for their exercise; the State remaining in the mean time exposed to all the dangers of invasion from without, and convulsions within. </li>
     <li> He has endeavoured to prevent the population of these States; for that purpose obstructing the Laws for Naturalization of Foreigners; refusing to pass others to encourage their migrations hither, and raising the conditions of new Appropriations of Lands. </li>
     <li> He has obstructed the Administration of Justice, by refusing his Assent to Laws for establishing Judiciary powers. </li>
+    <li> He has made Judges dependent on his Will alone, for the tenure of their offices, and the amount and payment of their salaries. </li>
+    <li> He has erected a multitude of New Offices, and sent hither swarms of Officers to harrass our people, and eat out their substance. </li>
+    <li> He has kept among us, in times of peace, Standing Armies without the Consent of our legislatures. </li>
+    <li> He has affected to render the Military independent of and superior to the Civil power. </li>
+    <li> He has combined with others to subject us to a jurisdiction foreign to our constitution, and unacknowledged by our laws; giving his Assent to their Acts of pretended Legislation: </li>
+    <li> For Quartering large bodies of armed troops among us: </li>
+    <li> For protecting them, by a mock Trial, from punishment for any Murders which they should commit on the Inhabitants of these States: </li>
+    <li> For cutting off our Trade with all parts of the world: </li>
+    <li> For imposing Taxes on us without our Consent: </li>
+    <li> For depriving us in many cases, of the benefits of Trial by Jury: </li>
+    <li> For transporting us beyond Seas to be tried for pretended offences: </li>
+    <li> For abolishing the free System of English Laws in a neighbouring Province, establishing therein an Arbitrary government, and enlarging its Boundaries so as to render it at once an example and fit instrument for introducing the same absolute rule into these Colonies: </li>
+    <li> For taking away our Charters, abolishing our most valuable Laws, and altering fundamentally the Forms of our Governments: </li>
+    <li> For suspending our own Legislatures, and declaring themselves invested with power to legislate for us in all cases whatsoever. </li>
+    <li> He has abdicated Government here, by declaring us out of his Protection and waging War against us. </li>
+    <li> He has plundered our seas, ravaged our Coasts, burnt our towns, and destroyed the lives of our people. </li>
+    <li> He is at this time transporting large Armies of foreign Mercenaries to compleat the works of death, desolation and tyranny, already begun with circumstances of Cruelty & perfidy scarcely paralleled in the most barbarous ages, and totally unworthy the Head of a civilized nation. </li>
+    <li> He has constrained our fellow Citizens taken Captive on the high Seas to bear Arms against their Country, to become the executioners of their friends and Brethren, or to fall themselves by their Hands.</li>
+    <li> He has excited domestic insurrections amongst us, and has endeavoured to bring on the inhabitants of our frontiers, the merciless Indian Savages, whose known rule of warfare, is an undistinguished destruction of all ages, sexes and conditions.</li>
     
 </ul>
+<P> In every stage of these Oppressions We have Petitioned for Redress in the most humble terms: Our repeated Petitions have been answered only by repeated injury. A Prince, whose character is thus marked by every act which may define a Tyrant, is unfit to be the ruler of a free people. </P>
+<p> Nor have We been wanting in attentions to our Brittish brethren. We have warned them from time to time of attempts by their legislature to extend an unwarrantable jurisdiction over us. We have reminded them of the circumstances of our emigration and settlement here. We have appealed to their native justice and magnanimity, and we have conjured them by the ties of our common kindred to disavow these usurpations, which, would inevitably interrupt our connections and correspondence. They too have been deaf to the voice of justice and of consanguinity. We must, therefore, acquiesce in the necessity, which denounces our Separation, and hold them, as we hold the rest of mankind, Enemies in War, in Peace Friends. </p>
+<P> We, therefore, the Representatives of the united States of America, in General Congress, Assembled, appealing to the Supreme Judge of the world for the rectitude of our intentions, do, in the Name, and by Authority of the good People of these Colonies, solemnly publish and declare, That these United Colonies are, and of Right ought to be Free and Independent States; that they are Absolved from all Allegiance to the British Crown, and that all political connection between them and the State of Great Britain, is and ought to be totally dissolved; and that as Free and Independent States, they have full Power to levy War, conclude Peace, contract Alliances, establish Commerce, and to do all other Acts and Things which Independent States may of right do. And for the support of this Declaration, with a firm reliance on the protection of divine Providence, we mutually pledge to each other our Lives, our Fortunes and our sacred Honor. </P>
+
