--- a/module02/index.html
+++ b/module02/index.html
@@ -1,5 +1,11 @@
-<div id="page">
+<style>
+.myDiv {
+    border: 1000px red;
+    background-color: white;
+}
+</style>
 
+<div id="page">
 <header style="background-color:SlateBlue "> <h1> <strong> Declaration of Independence: A Transcription </strong></h1>
 <h2> <strong> In Congress, July 4, 1776 </strong> </h2> </header>
     
