--- a/module02/index.html
+++ b/module02/index.html
@@ -2,8 +2,11 @@
 <html lang ="en-US">
 
 <body style="background-color:Tan">
-<head style="background-color:SlateBlue "> <h1> <strong> Declaration of Independence: A Transcription </strong></h1>
-<h2> <strong> In Congress, July 4, 1776 </strong> </h2> </head>
+    
+<head>
+<header style="background-color:SlateBlue "> <h1> <strong> Declaration of Independence: A Transcription </strong></h1>
+<h2> <strong> In Congress, July 4, 1776 </strong> </h2> </header>
+ </head>   
     
 <main>
 <p> The unanimous Declaration of the thirteen united States of America, When in the Course of human events, it becomes necessary for one people to dissolve the political bands which have connected them with another, and to assume among the powers of the earth, the separate and equal station to which the Laws of Nature and of Nature's God entitle them, a decent respect to the opinions of mankind requires that they should declare the causes which impel them to the separation. </p>
