--- a/module02/index.html
+++ b/module02/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang ="en-US">
 
-<body style="background-color:LightTan; color:white">
+<body style="background-color:Tan; color:white">
     
 <div id="page" sytle="width:1000px; margin:auto">    
 <head>
