--- a/clean_up/index-copy.html
+++ b/clean_up/index-copy.html
@@ -132,7 +132,7 @@
         }
     </style>
 </head>
-<body>
+<body style= "color: #e0e0e0; background_color: #0a0e27; ">
     <header>
         <div class="container">
             <h1>CSS Hub</h1>
