--- a/lab04/index-copy.html
+++ b/lab04/index-copy.html
@@ -268,7 +268,7 @@
         </section>
     </main>
 
-    <footer>
+    <footer style ="color: #00d4ff ;background-color: #0f1a3d;">
         <div class="container">
             <p>&copy; 2026 TCD CIS All rights reserved. | Powered by Innovation</p>
         </div>
